leth-config: WebUI: update about page

--- a/leth-config/files/www/index.html
+++ b/leth-config/files/www/index.html
@@ -439,8 +439,8 @@
         <div>
           <div class="centered" data-role="content">
             <h1 id="about_title_model">LETH</h1>
-            <h2 id="about_model_description">OpenWrt/LEDE driven LED controller</h2>
-            <p>© <span id="about_copyright_years">2018</span> by <a id="about_copyright_link" href="http://hardturm.ch/luz" target="_blank">luz</a></p>
+            <h2 id="about_model_description">OpenWrt driven LED controller</h2>
+            <p>© <span id="about_copyright_years">2018</span> by <a href="https://plan44.ch/custom" target="_blank">plan44/luz</a> / <a href="https://github.com/ulai" target="_blank">ulai</a></p>
           </div>
 
           <h3>Opensource:</h3>
@@ -450,21 +450,54 @@
             <div data-role="collapsible">
               <h3>OpenWrt - © OpenWrt Project, GPL v2</h3>
 
-              <h4><a href="http://openwrt.org" target="_blank">OpenWrt</a> -  Linux distribution for embedded devices</h4>
+              <h4><a href="https://openwrt.org" target="_blank">OpenWrt</a> -  Linux distribution for embedded network devices</h4>
 
               <p>OpenWrt is free software: you can redistribute it and/or modify
               it under the terms of the GNU General Public License as published by
               the Free Software Foundation, version 2 of the License.</p>
 
               <p>You should have received a copy of the GNU General Public License
-              along with openwrt. If not, see <a href="http://www.gnu.org/licenses/" target="_blank">http://www.gnu.org/licenses/</a>.</p>
+              along with openwrt. If not, see <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank">www.gnu.org/licenses</a>.</p>
+            </div>
+
+            <div data-role="collapsible">
+              <h3>p44utils - © 2013-2018 by plan44.ch, GPLv3</h3>
+
+              <h4><a href="https://github.com/plan44/p44utils" target="_blank">p44utils</a> - C++ utility framework for automation daemons</h4>
+
+              <p>p44utils is free software: you can redistribute it and/or modify
+              it under the terms of the GNU General Public License as published by
+              the Free Software Foundation, either version 3 of the License, or
+              (at your option) any later version.</p>
+
+              <p>p44utils is distributed in the hope that it will be useful,
+              but WITHOUT ANY WARRANTY; without even the implied warranty of
+              MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+              GNU General Public License for more details.</p>
+
+              <p>You should have received a copy of the GNU General Public License
+              along with p44utils. If not, see <a href="http://www.gnu.org/licenses/gpl-3.0.html" target="_blank">www.gnu.org/licenses</a>.</p>
+            </div>
+
+
+            <div data-role="collapsible">
+              <h3>p44-ledchain - © plan44.ch, GPL v2</h3>
+
+              <h4><a href="https://github.com/plan44/plan44-feed/tree/master/p44-ledchain" target="_blank">p44-ledchain</a> -  Linux kernel driver for MT76x8 SoC to control WS281x type LED chains</h4>
+
+              <p>p44-ledchain is free software: you can redistribute it and/or modify
+              it under the terms of the GNU General Public License as published by
+              the Free Software Foundation, version 2 of the License.</p>
+
+              <p>You should have received a copy of the GNU General Public License
+              along with p44-ledchain. If not, see <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank">www.gnu.org/licenses</a>.</p>
             </div>
 
             <div data-role="collapsible">
               <h3>jQuery mobile 1.3.2 - © 2010-2013 jQuery Foundation, Inc. and other contributors, MIT license</h3>
 
-              <h4><a href="http://jquerymobile.com" target="_blank">jQuery mobile</a> - Touch-Optimized Web Framework for Smartphones &amp; Tablets</h4>
-              <p>Copyright 2010-2013 <a href="http://jquery.com/" target="_blank">jQuery Foundation, Inc.</a> and other contributors</p>
+              <h4><a href="https://jquerymobile.com" target="_blank">jQuery mobile</a> - Touch-Optimized Web Framework for Smartphones &amp; Tablets</h4>
+              <p>Copyright 2010-2013 <a href="https://jquery.com/" target="_blank">jQuery Foundation, Inc.</a> and other contributors</p>
 
               <p>Permission is hereby granted, free of charge, to any person obtaining
               a copy of this software and associated documentation files (the
@@ -514,50 +547,6 @@
               THE SOFTWARE.</p>
             </div>
 
-            <div data-role="collapsible">
-              <h3>avahi - © 2004 avahi.org, LGPL v2.1 or later</h3>
-
-              <h4><a href="http://avahi.org" target="_blank">avahi</a> - service discovery on a local network via the mDNS/DNS-SD</h4>
-              <p>Copyright (c) 2004 avahi.org</p>
-
-              <p>avahi is free software; you can redistribute it and/or modify it
-              under the terms of the GNU Lesser General Public License as
-              published by the Free Software Foundation; either version 2.1 of the
-              License, or (at your option) any later version.</p>
-
-              <p>avahi is distributed in the hope that it will be useful, but WITHOUT
-              ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
-              or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
-              Public License for more details.</p>
-
-              <p>You should have received a copy of the GNU Lesser General Public
-              License along with avahi; if not, see <a href="http://www.gnu.org/licenses/" target="_blank">http://www.gnu.org/licenses/</a></p>
-            </div>
-
-            <div data-role="collapsible">
-              <h3>sqlite3pp - © 2012 Wongoo Lee, MIT license</h3>
-
-              <h4><a href="https://code.google.com/p/sqlite3pp/" target="_blank">sqlite3pp</a> - light C++ wrapper for SQLite3 API</h4>
-              <p>Copyright (c) 2012 Wongoo Lee (iwongu at gmail dot com)</p>
-
-              <p>Permission is hereby granted, free of charge, to any person obtaining a copy
-              of this software and associated documentation files (the "Software"), to deal
-              in the Software without restriction, including without limitation the rights
-              to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-              copies of the Software, and to permit persons to whom the Software is
-              furnished to do so, subject to the following conditions:</p>
-
-              <p>The above copyright notice and this permission notice shall be included in
-              all copies or substantial portions of the Software.</p>
-
-              <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-              IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-              FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-              AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-              LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-              OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-              THE SOFTWARE.</p>
-            </div>
 
             <div data-role="collapsible">
               <h3>json-c - © 2009-2012 Eric Haszlakiewicz, MIT license</h3>
@@ -583,14 +572,6 @@
               LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
               OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
               SOFTWARE.</p>
-            </div>
-
-            <div data-role="collapsible">
-              <h3>jQuery Sapling - © Tamer Aydin, MIT license</h3>
-
-              <h4><a href="http://tamerayd.in/jquery-sapling/" target="_blank">jQuery Sapling</a> - ultra-lightweight tree/accordion plugin</h4>
-
-              <p><a href="http://tameraydin.mit-license.org/" target="_blank">MIT License</a></p>
             </div>
 
           </div>
