--- a/leth-config/files/www/tweak.html
+++ b/leth-config/files/www/tweak.html
@@ -73,16 +73,17 @@
         selectHtml +=
           '<option disabled>templates</option>' +
           '<option value="1000">{ "cmd":"now" }</option>' +
-          '<option value="1000">{ "cmd":"init", "light":1 }</option>' +
-          '<option value="1000">{ "cmd":"init", "neuron": { "movingAverageCount": 20, "threshold": 250, "numBodyLeds": 70, "numAxonLeds":70, "x":1, "y":1 } }</option>' +
-          '<option value="1000">{ "cmd":"init", "text": [ { "cols": 72, "offset": 0, "orientation": 0 } ] }</option>' +
-          '<option value="1000">{ "cmd":"init", "text": [ { "cols": 47, "offset": 0, "orientation": 0 }, { "cols": 24, "offset": 47, "orientation": 0 } ] }</option>' +
-          '<option value="1000">{ "cmd":"init", "text": [ { "cols": 72, "offset": 71, "orientation": 0 } ] }</option>' +
-          '<option value="1000">{ "feature":"light", "cmd":"fade", "to":1, "t":5000 }</option>' +
-          '<option value="1000">{ "feature":"text", "backgroundcolor":"000" }</option>' +
-          '<option value="1000">{ "feature":"text", "cmd":"fade", "to":0, "t":5000 }</option>' +
-          '<option value="1000">{ "feature":"text", "cmd":"startscroll", "stepx":1, "interval":80, "start":null }</option>';
-
+          '<option value="1001">{ "cmd":"init", "light":1 }</option>' +
+          '<option value="1002">{ "cmd":"init", "neuron": { "movingAverageCount": 20, "threshold": 250, "numBodyLeds": 70, "numAxonLeds":70, "x":1, "y":1 } }</option>' +
+          '<option value="1003">{ "cmd":"init", "text": [ { "cols": 72, "offset": 0, "orientation": 0 } ] }</option>' +
+          '<option value="1004">{ "cmd":"init", "text": [ { "cols": 47, "offset": 0, "orientation": 0 }, { "cols": 24, "offset": 47, "orientation": 0 } ] }</option>' +
+          '<option value="1005">{ "cmd":"init", "text": [ { "cols": 72, "offset": 71, "orientation": 0 } ] }</option>' +
+          '<option value="1006">{ "feature":"light", "cmd":"fade", "to":1, "t":5000 }</option>' +
+          '<option value="1007">{ "feature":"text", "backgroundcolor":"000" }</option>' +
+          '<option value="1008">{ "feature":"text", "cmd":"fade", "to":0, "t":5000 }</option>' +
+          '<option value="1009">{ "feature":"text", "cmd":"startscroll", "stepx":1, "interval":80, "start":null }</option>' +
+          '<option value="1010">{ "feature":"text", "scene":"scenes/stepup.json" }</option>' +
+          '<option value="1010">{ "feature":"text", "cmd":"reconfigure", "view":"PACMAN", "config":{ "color":"#FFD700" } }</option>';
 
         $('#jsonExamples').html(selectHtml).trigger('create');
         $('#jsonExamples').val(0).selectmenu('refresh');
